--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -2200,7 +2200,7 @@
   }
 }
 
-.navbar-main-div {
+.navbar-container-div .navbar-main-div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2225,19 +2225,19 @@
 }
 
 @media screen and (max-width: 900px) {
-  .navbar-main-div {
+  .navbar-container-div .navbar-main-div {
     width: 75%;
   }
 }
 
 @media screen and (max-width: 600px) {
-  .navbar-main-div {
+  .navbar-container-div .navbar-main-div {
     width: 90%;
   }
 }
 
 @media screen and (max-width: 550px) {
-  .navbar-main-div {
+  .navbar-container-div .navbar-main-div {
     width: 90%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -2261,7 +2261,7 @@
 }
 
 @media screen and (max-width: 490px) {
-  .navbar-main-div {
+  .navbar-container-div .navbar-main-div {
     width: 70%;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -2284,7 +2284,7 @@
   }
 }
 
-a#link.navbar-links {
+.navbar-container-div a#link.navbar-links {
   font-size: 1.3em;
   text-decoration: none;
   color: #5d5d5d;
@@ -2293,29 +2293,564 @@ a#link.navbar-links {
 }
 
 @media screen and (max-width: 900px) {
-  a#link.navbar-links {
+  .navbar-container-div a#link.navbar-links {
     font-size: 1.1em;
   }
-  a#link.navbar-links:hover {
+  .navbar-container-div a#link.navbar-links:hover {
     color: #3d3d3d;
     font-weight: bold;
   }
 }
 
 @media screen and (max-width: 550px) {
-  a#link.navbar-links {
+  .navbar-container-div a#link.navbar-links {
     font-size: 1em;
   }
-  a#link.navbar-links:hover {
+  .navbar-container-div a#link.navbar-links:hover {
     color: #3d3d3d;
     font-weight: bold;
     margin-bottom: 5px;
   }
 }
 
-a#link.navbar-links:hover {
+.navbar-container-div a#link.navbar-links:hover {
   color: #3d3d3d;
   font-weight: bold;
+}
+
+.settings-outer-container {
+  width: 100vw;
+  height: 75vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+}
+
+.settings-outer-container .settings-main-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 65%;
+  height: 100%;
+}
+
+@media screen and (max-width: 1390px) {
+  .settings-outer-container .settings-main-container {
+    width: 100%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  .settings-outer-container .settings-main-container {
+    width: 100%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .settings-outer-container .settings-main-container {
+    width: 100%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .settings-outer-container .settings-main-container {
+    width: 100%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .settings-outer-container .settings-main-container {
+    width: 100%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+.settings-outer-container .settings-tab-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 30;
+  height: 90%;
+}
+
+@media screen and (max-width: 800px) {
+  .settings-outer-container .settings-tab-container {
+    width: 25%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .settings-outer-container .settings-tab-container {
+    width: 25%;
+  }
+}
+
+@media screen and (max-width: 610px) {
+  .settings-outer-container .settings-tab-container {
+    width: 25%;
+  }
+}
+
+.settings-outer-container .settings-tab-list {
+  width: 280px;
+  height: 100%;
+  background-color: #cacbcc;
+  text-decoration: none;
+  list-style-type: none;
+  line-height: 3em;
+  padding: 2em;
+}
+
+@media screen and (max-width: 900px) {
+  .settings-outer-container .settings-tab-list {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .settings-outer-container .settings-tab-list {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .settings-outer-container .settings-tab-list {
+    width: 100%;
+    font-size: 11px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .settings-outer-container .settings-tab-list {
+    width: 100%;
+    font-size: 11px;
+    padding: 0.5em;
+  }
+}
+
+.settings-outer-container .settings-tab-list .settings-tab-list-item {
+  color: #555657;
+  font-size: 1.3em;
+  -webkit-transition: 0.1s ease-in;
+  transition: 0.1s ease-in;
+}
+
+.settings-outer-container .settings-tab-list .settings-tab-list-item:hover {
+  color: white;
+}
+
+.settings-outer-container .settings-content-container {
+  border: 1px solid #4f5050;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 70;
+  height: 90%;
+}
+
+@media screen and (max-width: 900px) {
+  .settings-outer-container .settings-content-container {
+    width: 60;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .settings-outer-container .settings-content-container {
+    width: 55;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .settings-outer-container .settings-content-container {
+    width: 50;
+  }
+}
+
+.settings-outer-container .settings-content-items {
+  height: 100%;
+}
+
+.profile-contents {
+  width: 600px;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: scroll;
+}
+
+@media screen and (max-width: 900px) {
+  .profile-contents {
+    width: 500px;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .profile-contents {
+    width: 450px;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .profile-contents {
+    width: 410px;
+  }
+}
+
+@media screen and (max-width: 680px) {
+  .profile-contents {
+    width: 380px;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .profile-contents {
+    width: 340px;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .profile-contents {
+    width: 310px;
+  }
+}
+
+@media screen and (max-width: 565px) {
+  .profile-contents {
+    width: 300px;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .profile-contents {
+    width: 290px;
+  }
+}
+
+@media screen and (max-width: 400px) {
+  .profile-contents {
+    width: 250px;
+  }
+}
+
+.profile-contents::-webkit-scrollbar {
+  width: 4px;
+}
+
+.profile-contents::-webkit-scrollbar-track {
+  -webkit-box-shadow: inset 0 0 6px rgba(231, 225, 225, 0.3);
+          box-shadow: inset 0 0 6px rgba(231, 225, 225, 0.3);
+}
+
+.profile-contents::-webkit-scrollbar-thumb {
+  background-color: #36c2bb;
+  outline: 1px solid #828e9b;
+}
+
+.profile-contents .profile-header-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  width: 100%;
+  height: 90px;
+  padding: 0.5em;
+}
+
+.profile-contents .profile-header-title {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 100%;
+  padding: 0.5em;
+  font-size: 1.3em;
+}
+
+.profile-contents .profile-section-cutoff {
+  color: #626464;
+  width: 95%;
+}
+
+.profile-contents .blurb {
+  font-size: 0.9em;
+  color: #6e7070;
+}
+
+.profile-contents .profile-information-section {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 100%;
+}
+
+.profile-contents .profile-information-section .section-divider-title {
+  color: #525555;
+  margin-left: 2em;
+  margin-top: 1em;
+}
+
+.profile-contents .profile-information-section .profile-question-section {
+  width: 100%;
+  padding: 0.9em;
+  color: #676969;
+}
+
+.profile-contents .profile-information-section .info-section-question-title {
+  padding-left: 1em;
+  margin-bottom: 6px;
+  color: #676969;
+}
+
+.profile-contents .profile-information-section .info-section-inputs {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  padding-left: 3em;
+}
+
+@media screen and (max-width: 710px) {
+  .profile-contents .profile-information-section .info-section-inputs {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    font-family: "Avenir";
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+    padding-left: 1em;
+  }
+}
+
+.profile-contents .profile-information-section .info-section-inputs-mini {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+  margin-right: 1.2em;
+}
+
+.profile-contents .profile-information-section .infor-input-option {
+  margin-right: 7px;
+}
+
+.profile-contents .profile-information-section .info-section-dropdown {
+  width: 90%;
+  padding: 1em;
+}
+
+.profile-contents .profile-information-section select#education {
+  margin-left: 3em;
+  width: 87%;
+  height: 30px;
+  color: #676969;
+}
+
+@media screen and (max-width: 710px) {
+  .profile-contents .profile-information-section select#education {
+    margin-left: 1em;
+  }
+}
+
+.profile-contents .profile-information-section select#income {
+  margin-left: 3em;
+  width: 87%;
+  height: 30px;
+  color: #676969;
+}
+
+@media screen and (max-width: 710px) {
+  .profile-contents .profile-information-section select#income {
+    margin-left: 1em;
+  }
+}
+
+.profile-contents .profile-information-section select#residential-status {
+  margin-left: 3em;
+  width: 87%;
+  height: 30px;
+  color: #676969;
+}
+
+@media screen and (max-width: 710px) {
+  .profile-contents .profile-information-section select#residential-status {
+    margin-left: 1em;
+  }
+}
+
+.profile-contents .profile-information-section .info-section-household {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  -webkit-box-pack: space-evenly;
+      -ms-flex-pack: space-evenly;
+          justify-content: space-evenly;
+}
+
+.profile-contents .profile-information-section select#adults {
+  margin-left: 1em;
+  width: 40%;
+  height: 30px;
+  color: #676969;
+}
+
+.profile-contents .profile-information-section select#children {
+  margin-left: 2em;
+  width: 40%;
+  height: 30px;
+  color: #676969;
 }
 
 body,
