--- a/public/assets/Styles/04.Settings/Settings.css
+++ b/public/assets/Styles/04.Settings/Settings.css
@@ -1,1 +1,218 @@
-/* No CSS *//*# sourceMappingURL=Settings.css.map */
+.settings-outer-container {
+  width: 100vw;
+  height: 75vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+}
+
+.settings-outer-container .settings-main-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Avenir";
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  width: 65%;
+  height: 100%;
+}
+
+@media screen and (max-width: 1390px) {
+  .settings-outer-container .settings-main-container {
+    width: 100%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 1150px) {
+  .settings-outer-container .settings-main-container {
+    width: 100%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .settings-outer-container .settings-main-container {
+    width: 100%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .settings-outer-container .settings-main-container {
+    width: 100%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+@media screen and (max-width: 750px) {
+  .settings-outer-container .settings-main-container {
+    width: 100%;
+    -webkit-box-pack: space-evenly;
+        -ms-flex-pack: space-evenly;
+            justify-content: space-evenly;
+  }
+}
+
+.settings-outer-container .settings-tab-container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 30;
+  height: 90%;
+}
+
+@media screen and (max-width: 800px) {
+  .settings-outer-container .settings-tab-container {
+    width: 25%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .settings-outer-container .settings-tab-container {
+    width: 25%;
+  }
+}
+
+@media screen and (max-width: 610px) {
+  .settings-outer-container .settings-tab-container {
+    width: 25%;
+  }
+}
+
+.settings-outer-container .settings-tab-list {
+  width: 280px;
+  height: 100%;
+  background-color: #cacbcc;
+  text-decoration: none;
+  list-style-type: none;
+  line-height: 3em;
+  padding: 2em;
+}
+
+@media screen and (max-width: 900px) {
+  .settings-outer-container .settings-tab-list {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .settings-outer-container .settings-tab-list {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .settings-outer-container .settings-tab-list {
+    width: 100%;
+    font-size: 11px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .settings-outer-container .settings-tab-list {
+    width: 100%;
+    font-size: 11px;
+    padding: 0.5em;
+  }
+}
+
+.settings-outer-container .settings-tab-list .settings-tab-list-item {
+  color: #555657;
+  font-size: 1.3em;
+  -webkit-transition: 0.1s ease-in;
+  transition: 0.1s ease-in;
+}
+
+.settings-outer-container .settings-tab-list .settings-tab-list-item:hover {
+  color: white;
+}
+
+.settings-outer-container .settings-content-container {
+  border: 1px solid #4f5050;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  font-family: "Avenir";
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  width: 70;
+  height: 90%;
+}
+
+@media screen and (max-width: 900px) {
+  .settings-outer-container .settings-content-container {
+    width: 60;
+  }
+}
+
+@media screen and (max-width: 800px) {
+  .settings-outer-container .settings-content-container {
+    width: 55;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .settings-outer-container .settings-content-container {
+    width: 50;
+  }
+}
+
+.settings-outer-container .settings-content-items {
+  height: 100%;
+}
+/*# sourceMappingURL=Settings.css.map */
