--- a/public/assets/Styles/SharedComponents/01.Header/Header.scss
+++ b/public/assets/Styles/SharedComponents/01.Header/Header.scss
@@ -14,6 +14,7 @@
   justify-content: space-between;
   align-items: center;
   height: 110px;
+  width: 100%;
   font-family: "Avenir";
   @media screen and (max-width: 1000px) {
     width: 100%;
