--- a/public/assets/Styles/00.Global/global.css
+++ b/public/assets/Styles/00.Global/global.css
@@ -3286,6 +3286,7 @@
           flex-direction: row;
   width: 100vw;
   margin: 60px 0 30px;
+  font-family: "Avenir";
 }
 
 .bb-mid-div {
@@ -3520,6 +3521,87 @@
 
 .bb-left .bb-budget-box .bb-budget-bottom .bb-budget-bottom-row .bb-budget-dollars {
   font-size: 24px;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  width: 100%;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-add-input-group {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  margin: 0 20px 20px 0;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-input-title {
+  font-size: 20px;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-input-field {
+  width: 300px;
+  height: 33px;
+  padding-left: 5px;
+  font-size: 18px;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-add-custom {
+  margin-top: 10px;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-add-custom-btn {
+  border: none;
+  background-color: none;
+  color: black;
+  cursor: pointer;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-add-custom-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.bb-left .bb-budget-box .bb-budget-bottom .bb-add-body .bb-add-custom-row .bb-input-custom-field {
+  width: 200px;
+  height: 33px;
+  padding-left: 5px;
+  font-size: 18px;
 }
 
 .bb-right {
