--- a/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.scss
+++ b/public/assets/Styles/07.BudgetBreakdown/BudgetBreakdown.scss
@@ -9,6 +9,7 @@
   @include center(row);
   width: 100vw;
   margin: 60px 0 30px;
+  font-family: "Avenir";
 }
 
 .bb-mid-div {
@@ -106,6 +107,46 @@
         }
         .bb-budget-dollars {
           font-size: 24px;
+        }
+      }
+      .bb-add-body {
+        @include center(column);
+        align-items: flex-start;
+        width: 100%;
+        .bb-add-input-group {
+          @include center(column);
+          align-items: flex-start;
+          margin: 0 20px 20px 0;
+        }
+        .bb-input-title {
+          font-size: 20px;
+        }
+        .bb-input-field {
+          width: 300px;
+          height: 33px;
+          padding-left: 5px;
+          font-size: 18px;
+        }
+        .bb-add-custom {
+          margin-top: 10px;
+        }
+        .bb-add-custom-btn {
+          border: none;
+          background-color: none;
+          color: black;
+          cursor: pointer;
+          font-size: 20px;
+          margin-bottom: 20px;
+        }
+        .bb-add-custom-row {
+          display: flex;
+          flex-direction: row;
+          .bb-input-custom-field {
+            width: 200px;
+            height: 33px;
+            padding-left: 5px;
+            font-size: 18px;
+          }
         }
       }
     }
